2010-10-20  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Merge ColorSpace and ImageColorSpace enums
        https://bugs.webkit.org/show_bug.cgi?id=47922

        Renamed ColorSpace enum entries DeviceColorSpace and sRGBColorSpace to ColorSpaceDeviceRGB and ColorSpaceSRGB
        to follow webkit style rules.

        * src/WebFontImpl.cpp:
        (WebKit::WebFontImpl::drawText):
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::paintWithContext):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::doPixelReadbackToCanvas):
        * tests/TransparencyWinTest.cpp:
        (WebCore::TEST):

2010-10-19  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: expose request/response cookies in HAR
        https://bugs.webkit.org/show_bug.cgi?id=47894

        * src/WebResourceRawHeaders.cpp:
        (WebKit::addHeader): paste coalescent headers using "\n: as a separator instead of ", "

2010-10-19  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] Use webkit's TestNetscapePlugIn in DRT mac
        https://bugs.webkit.org/show_bug.cgi?id=47850

        * WebKit.gyp: Copy WebKitTestPlugIn into plugins and add
            GCC_SYMBOLS_PRIVATE_EXTERN: NO to export the symbols.

2010-10-19  Tony Chang  <tony@chromium.org>

        Unreviewed.  Rolling chromium DEPS to 63057 to pick up mac plugin
        loading in DRT.

        * DEPS: bump chromium DEPS to 63057.

2010-10-19  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] DumpRenderTree shouldn't put '.' in include path
        https://bugs.webkit.org/show_bug.cgi?id=47877

        * WebKit.gyp: Replace '.' with <(chromium_src_dir) and add public

2010-10-18  Adrienne Walker  <enne@google.com>

        Reviewed by Kenneth Russell.

        Turn off antialiasing when using Mesa during testing.
        https://bugs.webkit.org/show_bug.cgi?id=47697
